namespace Scripts.Constants
{
    public static class AnimationNames
    {
        public static class Player
        {
            public const string Walk = "Walking";
            public const string Jump = "Jump";
            public const string Rope = "Rope";
            public const string Ladder = "Ladder";
        }
    }
}